--- a/Configurations/Open-Base.xcconfig
+++ b/Configurations/Open-Base.xcconfig
@@ -1,5 +1,8 @@
 TARGETED_DEVICE_FAMILY[sdk=iphone*]  = 1,2
-IPHONEOS_DEPLOYMENT_TARGET[sdk=iphone*]  = 11.0
+TARGETED_DEVICE_FAMILY[sdk=watch*] = 4
+
+IPHONEOS_DEPLOYMENT_TARGET  = 11.0
+WATCHOS_DEPLOYMENT_TARGET = 4.0
 
 DYLIB_COMPATIBILITY_VERSION = 1
 DYLIB_CURRENT_VERSION = 1
