--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - brew outdated carthage || brew upgrade carthage
   - bundle install
   - bundle exec pod install
-  - carthage bootstrap --verbose --no-use-binaries --platform iOS --cache-builds
+  - carthage update --cache-builds
 script:
   - bundle exec rake ci
 after_success:
