--- a/Sourcer.xcodeproj/xcshareddata/xcschemes/Sourcer-macOS.xcscheme
+++ b/Sourcer.xcodeproj/xcshareddata/xcschemes/Sourcer-macOS.xcscheme
@@ -3,37 +3,9 @@
    LastUpgradeVersion = "0900"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
-      buildImplicitDependencies = "NO">
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "233F34DEFB3AEA3FB2D0FB6F5D80783F"
-               BuildableName = "Pods_Sourcer.framework"
-               BlueprintName = "Pods-Sourcer"
-               ReferencedContainer = "container:Pods/Pods.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "043CB62C1F18E5590097F577"
-               BuildableName = "Open.framework"
-               BlueprintName = "Open-macOS"
-               ReferencedContainer = "container:Frameworks/Open/Open.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -46,20 +18,6 @@
                BuildableName = "Sourcer.app"
                BlueprintName = "Sourcer"
                ReferencedContainer = "container:Sourcer.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "C465FA4DFA7D3391C89282F393E47F76"
-               BuildableName = "Pods_SourcerTests.framework"
-               BlueprintName = "Pods-SourcerTests"
-               ReferencedContainer = "container:Pods/Pods.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
